// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`messages.tsx snapshots > empty inbox — headline, filter-less, first-run EmptyState 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#EEF1EC",
      },
    ]
  }
>
  <SafeAreaView
    edges={
      [
        "top",
      ]
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "paddingBottom": 12,
            "paddingHorizontal": 16,
          },
          {
            "paddingTop": 12,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "gap": 12,
          }
        }
      >
        <View
          accessibilityRole="header"
          style={
            {
              "flex": 1,
              "gap": 4,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Fraunces_600SemiBold",
                  "fontSize": 27,
                  "letterSpacing": -0.3,
                  "lineHeight": 31.049999999999997,
                },
                null,
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            messages:title
          </Text>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 8,
            }
          }
        >
          <Pressable
            accessibilityLabel="messages:searchAria"
            accessibilityRole="button"
            hitSlop={8}
            onPress={[Function]}
            style={[Function]}
          >
            <Ionicons
              accessibilityElementsHidden={true}
              color="#14201B"
              importantForAccessibility="no-hide-descendants"
              name="search"
              size={20}
            />
          </Pressable>
        </View>
      </View>
    </View>
    <SectionList>
      <View
        accessibilityRole="text"
        accessible={true}
        style={
          {
            "alignItems": "center",
            "gap": 8,
            "paddingHorizontal": 20,
            "paddingVertical": 32,
          }
        }
      >
        <View
          accessibilityElementsHidden={true}
          importantForAccessibility="no-hide-descendants"
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 9999,
                "height": 64,
                "justifyContent": "center",
                "marginBottom": 4,
                "width": 64,
              },
              {
                "backgroundColor": "#E2E8E1",
              },
            ]
          }
        >
          <Ionicons
            accessibilityElementsHidden={true}
            color="#4F5C55"
            importantForAccessibility="no-hide-descendants"
            name="chatbubbles-outline"
            size={24}
          />
        </View>
        <Text
          style={
            [
              {
                "fontSize": 18,
                "fontWeight": "600",
                "lineHeight": 23.400000000000002,
              },
              null,
              {
                "color": "#14201B",
                "textAlign": "center",
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          messages:emptyHero.title
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              null,
              {
                "color": "#4F5C55",
                "textAlign": "center",
                "writingDirection": "ltr",
              },
              {
                "maxWidth": 320,
              },
            ]
          }
        >
          messages:emptyHero.description
        </Text>
        <Pressable
          accessibilityLabel="messages:emptyHero.cta"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": false,
              "disabled": false,
            }
          }
          disabled={false}
          onPress={[Function]}
          style={[Function]}
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 8,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontWeight": "600",
                  },
                  {
                    "fontSize": 16,
                  },
                  {
                    "color": "#14201B",
                  },
                ]
              }
            >
              messages:emptyHero.cta
            </Text>
          </View>
        </Pressable>
      </View>
    </SectionList>
  </SafeAreaView>
</View>
`;

exports[`messages.tsx snapshots > error — full-screen retry EmptyState 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#EEF1EC",
      },
    ]
  }
>
  <SafeAreaView
    edges={
      [
        "top",
      ]
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "paddingBottom": 12,
            "paddingHorizontal": 16,
          },
          {
            "paddingTop": 12,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "gap": 12,
          }
        }
      >
        <View
          accessibilityRole="header"
          style={
            {
              "flex": 1,
              "gap": 4,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Fraunces_600SemiBold",
                  "fontSize": 27,
                  "letterSpacing": -0.3,
                  "lineHeight": 31.049999999999997,
                },
                null,
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            messages:title
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityRole="alert"
      accessible={true}
      style={
        {
          "alignItems": "center",
          "gap": 8,
          "paddingHorizontal": 20,
          "paddingVertical": 32,
        }
      }
    >
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 9999,
              "height": 64,
              "justifyContent": "center",
              "marginBottom": 4,
              "width": 64,
            },
            {
              "backgroundColor": "#F0D8CD",
            },
          ]
        }
      >
        <Ionicons
          accessibilityElementsHidden={true}
          color="#B5503C"
          importantForAccessibility="no-hide-descendants"
          name="cloud-offline-outline"
          size={24}
        />
      </View>
      <Text
        style={
          [
            {
              "fontSize": 18,
              "fontWeight": "600",
              "lineHeight": 23.400000000000002,
            },
            null,
            {
              "color": "#14201B",
              "textAlign": "center",
              "writingDirection": "ltr",
            },
            undefined,
          ]
        }
      >
        messages:error.title
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            null,
            {
              "color": "#4F5C55",
              "textAlign": "center",
              "writingDirection": "ltr",
            },
            {
              "maxWidth": 320,
            },
          ]
        }
      >
        messages:error.description
      </Text>
      <Pressable
        accessibilityLabel="common:actions.retry"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "disabled": false,
          }
        }
        disabled={false}
        onPress={[Function]}
        style={[Function]}
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontWeight": "600",
                },
                {
                  "fontSize": 16,
                },
                {
                  "color": "#14201B",
                },
              ]
            }
          >
            common:actions.retry
          </Text>
        </View>
      </Pressable>
    </View>
  </SafeAreaView>
</View>
`;

exports[`messages.tsx snapshots > loading — headline over conversation-row skeletons 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#EEF1EC",
      },
    ]
  }
>
  <SafeAreaView
    edges={
      [
        "top",
      ]
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "paddingBottom": 12,
            "paddingHorizontal": 16,
          },
          {
            "paddingTop": 12,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "gap": 12,
          }
        }
      >
        <View
          accessibilityRole="header"
          style={
            {
              "flex": 1,
              "gap": 4,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Fraunces_600SemiBold",
                  "fontSize": 27,
                  "letterSpacing": -0.3,
                  "lineHeight": 31.049999999999997,
                },
                null,
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            messages:title
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityRole="progressbar"
      style={
        {
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "gap": 12,
          }
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 16,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 12,
                "padding": 16,
              },
              {
                "backgroundColor": "#F7F9F5",
                "borderColor": "#DEE5DE",
              },
            ]
          }
        >
          <Animated.View
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            style={
              [
                {
                  "backgroundColor": "#E2E8E1",
                  "borderRadius": 9999,
                  "height": 44,
                  "opacity": AnimatedValue {
                    "value": 0.45,
                  },
                  "width": 44,
                },
                undefined,
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
                "gap": 8,
              }
            }
          >
            <Animated.View
              accessibilityElementsHidden={true}
              importantForAccessibility="no-hide-descendants"
              style={
                [
                  {
                    "backgroundColor": "#E2E8E1",
                    "borderRadius": 4,
                    "height": 8.4,
                    "opacity": AnimatedValue {
                      "value": 0.45,
                    },
                    "width": "55%",
                  },
                  undefined,
                ]
              }
            />
            <Animated.View
              accessibilityElementsHidden={true}
              importantForAccessibility="no-hide-descendants"
              style={
                [
                  {
                    "backgroundColor": "#E2E8E1",
                    "borderRadius": 4,
                    "height": 8.4,
                    "opacity": AnimatedValue {
                      "value": 0.45,
                    },
                    "width": "85%",
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 16,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 12,
                "padding": 16,
              },
              {
                "backgroundColor": "#F7F9F5",
                "borderColor": "#DEE5DE",
              },
            ]
          }
        >
          <Animated.View
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            style={
              [
                {
                  "backgroundColor": "#E2E8E1",
                  "borderRadius": 9999,
                  "height": 44,
                  "opacity": AnimatedValue {
                    "value": 0.45,
                  },
                  "width": 44,
                },
                undefined,
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
                "gap": 8,
              }
            }
          >
            <Animated.View
              accessibilityElementsHidden={true}
              importantForAccessibility="no-hide-descendants"
              style={
                [
                  {
                    "backgroundColor": "#E2E8E1",
                    "borderRadius": 4,
                    "height": 8.4,
                    "opacity": AnimatedValue {
                      "value": 0.45,
                    },
                    "width": "55%",
                  },
                  undefined,
                ]
              }
            />
            <Animated.View
              accessibilityElementsHidden={true}
              importantForAccessibility="no-hide-descendants"
              style={
                [
                  {
                    "backgroundColor": "#E2E8E1",
                    "borderRadius": 4,
                    "height": 8.4,
                    "opacity": AnimatedValue {
                      "value": 0.45,
                    },
                    "width": "85%",
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 16,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 12,
                "padding": 16,
              },
              {
                "backgroundColor": "#F7F9F5",
                "borderColor": "#DEE5DE",
              },
            ]
          }
        >
          <Animated.View
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            style={
              [
                {
                  "backgroundColor": "#E2E8E1",
                  "borderRadius": 9999,
                  "height": 44,
                  "opacity": AnimatedValue {
                    "value": 0.45,
                  },
                  "width": 44,
                },
                undefined,
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
                "gap": 8,
              }
            }
          >
            <Animated.View
              accessibilityElementsHidden={true}
              importantForAccessibility="no-hide-descendants"
              style={
                [
                  {
                    "backgroundColor": "#E2E8E1",
                    "borderRadius": 4,
                    "height": 8.4,
                    "opacity": AnimatedValue {
                      "value": 0.45,
                    },
                    "width": "55%",
                  },
                  undefined,
                ]
              }
            />
            <Animated.View
              accessibilityElementsHidden={true}
              importantForAccessibility="no-hide-descendants"
              style={
                [
                  {
                    "backgroundColor": "#E2E8E1",
                    "borderRadius": 4,
                    "height": 8.4,
                    "opacity": AnimatedValue {
                      "value": 0.45,
                    },
                    "width": "85%",
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
        <View
          style={
            [
              {
                "alignItems": "center",
                "borderRadius": 16,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 12,
                "padding": 16,
              },
              {
                "backgroundColor": "#F7F9F5",
                "borderColor": "#DEE5DE",
              },
            ]
          }
        >
          <Animated.View
            accessibilityElementsHidden={true}
            importantForAccessibility="no-hide-descendants"
            style={
              [
                {
                  "backgroundColor": "#E2E8E1",
                  "borderRadius": 9999,
                  "height": 44,
                  "opacity": AnimatedValue {
                    "value": 0.45,
                  },
                  "width": 44,
                },
                undefined,
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
                "gap": 8,
              }
            }
          >
            <Animated.View
              accessibilityElementsHidden={true}
              importantForAccessibility="no-hide-descendants"
              style={
                [
                  {
                    "backgroundColor": "#E2E8E1",
                    "borderRadius": 4,
                    "height": 8.4,
                    "opacity": AnimatedValue {
                      "value": 0.45,
                    },
                    "width": "55%",
                  },
                  undefined,
                ]
              }
            />
            <Animated.View
              accessibilityElementsHidden={true}
              importantForAccessibility="no-hide-descendants"
              style={
                [
                  {
                    "backgroundColor": "#E2E8E1",
                    "borderRadius": 4,
                    "height": 8.4,
                    "opacity": AnimatedValue {
                      "value": 0.45,
                    },
                    "width": "85%",
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </SafeAreaView>
</View>
`;

exports[`messages.tsx snapshots > populated — filter chips over Aujourd'hui/Hier day sections 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#EEF1EC",
      },
    ]
  }
>
  <SafeAreaView
    edges={
      [
        "top",
      ]
    }
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "paddingBottom": 12,
            "paddingHorizontal": 16,
          },
          {
            "paddingTop": 12,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "gap": 12,
          }
        }
      >
        <View
          accessibilityRole="header"
          style={
            {
              "flex": 1,
              "gap": 4,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": "Fraunces_600SemiBold",
                  "fontSize": 27,
                  "letterSpacing": -0.3,
                  "lineHeight": 31.049999999999997,
                },
                null,
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                undefined,
              ]
            }
          >
            messages:title
          </Text>
        </View>
        <View
          style={
            {
              "flexDirection": "row",
              "gap": 8,
            }
          }
        >
          <Pressable
            accessibilityLabel="messages:searchAria"
            accessibilityRole="button"
            hitSlop={8}
            onPress={[Function]}
            style={[Function]}
          >
            <Ionicons
              accessibilityElementsHidden={true}
              color="#14201B"
              importantForAccessibility="no-hide-descendants"
              name="search"
              size={20}
            />
          </Pressable>
        </View>
      </View>
    </View>
    <ScrollView
      contentContainerStyle={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "paddingBottom": 12,
          "paddingHorizontal": 16,
        }
      }
      horizontal={true}
      showsHorizontalScrollIndicator={false}
      style={
        {
          "flexGrow": 0,
          "flexShrink": 0,
        }
      }
    >
      <TouchableOpacity
        accessibilityLabel="booking:filters.all"
        accessibilityRole="button"
        accessibilityState={
          {
            "selected": true,
          }
        }
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 9999,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 12,
              "paddingVertical": 6,
            },
            {
              "backgroundColor": "#14201B",
              "borderColor": "transparent",
              "borderWidth": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "600",
              },
              {
                "color": "#F4F6F2",
              },
            ]
          }
        >
          booking:filters.all
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityLabel="booking:filters.upcoming"
        accessibilityRole="button"
        accessibilityState={
          {
            "selected": false,
          }
        }
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 9999,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 12,
              "paddingVertical": 6,
            },
            {
              "backgroundColor": "#F7F9F5",
              "borderColor": "#DEE5DE",
              "borderWidth": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "600",
              },
              {
                "color": "#4F5C55",
              },
            ]
          }
        >
          booking:filters.upcoming
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityLabel="booking:filters.active"
        accessibilityRole="button"
        accessibilityState={
          {
            "selected": false,
          }
        }
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 9999,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 12,
              "paddingVertical": 6,
            },
            {
              "backgroundColor": "#F7F9F5",
              "borderColor": "#DEE5DE",
              "borderWidth": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "600",
              },
              {
                "color": "#4F5C55",
              },
            ]
          }
        >
          booking:filters.active
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        accessibilityLabel="booking:filters.past"
        accessibilityRole="button"
        accessibilityState={
          {
            "selected": false,
          }
        }
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "borderRadius": 9999,
              "flexDirection": "row",
              "gap": 4,
              "paddingHorizontal": 12,
              "paddingVertical": 6,
            },
            {
              "backgroundColor": "#F7F9F5",
              "borderColor": "#DEE5DE",
              "borderWidth": 1,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "600",
              },
              {
                "color": "#4F5C55",
              },
            ]
          }
        >
          booking:filters.past
        </Text>
      </TouchableOpacity>
    </ScrollView>
    <SectionList>
      <View
        style={
          [
            {
              "paddingTop": 12,
              "textTransform": "uppercase",
            },
            {
              "backgroundColor": "#EEF1EC",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "500",
                "lineHeight": 21,
              },
              null,
              {
                "color": "#7D8981",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "letterSpacing": 0.5,
                "paddingBottom": 4,
                "textTransform": "uppercase",
              },
            ]
          }
        >
          common:time.today
        </Text>
      </View>
      <TouchableOpacity
        accessibilityLabel="messages:conversationWith Amine Ben Salah, Tunis → Sousse"
        accessibilityRole="button"
        activeOpacity={0.7}
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 16,
              "borderWidth": 1,
              "flexDirection": "row",
              "gap": 8,
              "marginBottom": 8,
              "paddingHorizontal": 12,
              "paddingVertical": 12,
            },
            {
              "backgroundColor": "#F7F9F5",
              "borderColor": "#DEE5DE",
            },
            {
              "elevation": 1,
            },
            {
              "shadowColor": "#14201B",
            },
            false,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "width": 8,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 4,
                  "height": 8,
                  "width": 8,
                },
                {
                  "backgroundColor": "#2E9E6C",
                },
              ]
            }
          />
        </View>
        <TouchableOpacity
          accessibilityLabel="common:actions.viewProfile"
          accessibilityRole="button"
          hitSlop={6}
          onPress={[Function]}
        >
          <View
            accessibilityLabel="Photo de Amine Ben Salah"
            accessibilityRole="image"
            accessible={true}
            style={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                {
                  "backgroundColor": "#E2E8E1",
                  "borderRadius": 24,
                  "height": 48,
                  "width": 48,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontWeight": "600",
                  },
                  {
                    "color": "#14201B",
                    "fontSize": 19,
                  },
                ]
              }
            >
              AB
            </Text>
          </View>
        </TouchableOpacity>
        <View
          style={
            {
              "flex": 1,
              "gap": 2,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 8,
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  null,
                  {
                    "color": "#14201B",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  [
                    {
                      "flexShrink": 1,
                      "fontWeight": "600",
                    },
                    {
                      "fontWeight": "800",
                    },
                  ],
                ]
              }
            >
              Amine Ben Salah
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  null,
                  {
                    "color": "#2E9E6C",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  {
                    "fontWeight": "700",
                  },
                ]
              }
            >
              09:41
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 4,
                    "paddingHorizontal": 4,
                    "paddingVertical": 1,
                  },
                  {
                    "backgroundColor": "#E2E8E1",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 18,
                    },
                    null,
                    {
                      "color": "#4F5C55",
                      "textAlign": undefined,
                      "writingDirection": "ltr",
                    },
                    {
                      "fontSize": 10,
                    },
                  ]
                }
              >
                booking:driver
              </Text>
            </View>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  null,
                  {
                    "color": "#7D8981",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              •
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  null,
                  {
                    "color": "#4F5C55",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  {
                    "flex": 1,
                  },
                ]
              }
            >
              Tunis → Sousse (common:time.tomorrow)
            </Text>
          </View>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
                null,
                {
                  "color": "#14201B",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                {
                  "fontWeight": "600",
                },
              ]
            }
          >
            Je passe vous prendre devant la station.
          </Text>
        </View>
      </TouchableOpacity>
      <View
        style={
          [
            {
              "paddingTop": 12,
              "textTransform": "uppercase",
            },
            {
              "backgroundColor": "#EEF1EC",
            },
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 14,
                "fontWeight": "500",
                "lineHeight": 21,
              },
              null,
              {
                "color": "#7D8981",
                "textAlign": undefined,
                "writingDirection": "ltr",
              },
              {
                "letterSpacing": 0.5,
                "paddingBottom": 4,
                "textTransform": "uppercase",
              },
            ]
          }
        >
          common:time.yesterday
        </Text>
      </View>
      <TouchableOpacity
        accessibilityLabel="messages:conversationWith Salma Trabelsi, Tunis → Hammamet"
        accessibilityRole="button"
        activeOpacity={0.7}
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 16,
              "borderWidth": 1,
              "flexDirection": "row",
              "gap": 8,
              "marginBottom": 8,
              "paddingHorizontal": 12,
              "paddingVertical": 12,
            },
            {
              "backgroundColor": "#F7F9F5",
              "borderColor": "#DEE5DE",
            },
            {
              "elevation": 1,
            },
            {
              "shadowColor": "#14201B",
            },
            {
              "opacity": 0.55,
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "width": 8,
            }
          }
        />
        <TouchableOpacity
          accessibilityLabel="common:actions.viewProfile"
          accessibilityRole="button"
          hitSlop={6}
          onPress={[Function]}
        >
          <View
            accessibilityLabel="Photo de Salma Trabelsi"
            accessibilityRole="image"
            accessible={true}
            style={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                {
                  "backgroundColor": "#E2E8E1",
                  "borderRadius": 24,
                  "height": 48,
                  "width": 48,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontWeight": "600",
                  },
                  {
                    "color": "#14201B",
                    "fontSize": 19,
                  },
                ]
              }
            >
              ST
            </Text>
          </View>
        </TouchableOpacity>
        <View
          style={
            {
              "flex": 1,
              "gap": 2,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 8,
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                  null,
                  {
                    "color": "#14201B",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  [
                    {
                      "flexShrink": 1,
                      "fontWeight": "600",
                    },
                    false,
                  ],
                ]
              }
            >
              Salma Trabelsi
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  null,
                  {
                    "color": "#7D8981",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  false,
                ]
              }
            >
              common:time.yesterday
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 4,
              }
            }
          >
            <View
              style={
                [
                  {
                    "borderRadius": 4,
                    "paddingHorizontal": 4,
                    "paddingVertical": 1,
                  },
                  {
                    "backgroundColor": "#E2E8E1",
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 18,
                    },
                    null,
                    {
                      "color": "#4F5C55",
                      "textAlign": undefined,
                      "writingDirection": "ltr",
                    },
                    {
                      "fontSize": 10,
                    },
                  ]
                }
              >
                booking:driver
              </Text>
            </View>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  null,
                  {
                    "color": "#7D8981",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  undefined,
                ]
              }
            >
              •
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "fontSize": 12,
                    "fontWeight": "400",
                    "lineHeight": 18,
                  },
                  null,
                  {
                    "color": "#4F5C55",
                    "textAlign": undefined,
                    "writingDirection": "ltr",
                  },
                  {
                    "flex": 1,
                  },
                ]
              }
            >
              Tunis → Hammamet
            </Text>
            <Ionicons
              accessibilityElementsHidden={true}
              color="#2E9E6C"
              importantForAccessibility="no-hide-descendants"
              name="checkmark-circle"
              size={16}
            />
          </View>
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "fontSize": 14,
                  "fontWeight": "400",
                  "lineHeight": 21,
                },
                null,
                {
                  "color": "#7D8981",
                  "textAlign": undefined,
                  "writingDirection": "ltr",
                },
                false,
              ]
            }
          >
            messages:conversationClosed
          </Text>
        </View>
      </TouchableOpacity>
    </SectionList>
  </SafeAreaView>
</View>
`;
